@@ -1,11 +1,9 @@
 package ru.lebedev.reminder.service.impl;
 
-import static ru.lebedev.reminder.database.entity.QReminder.reminder;
-
-import java.util.stream.Collectors;
+import java.time.LocalDateTime;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Pageable;
 import java.util.List;
-import org.mapstruct.Mapper;
 import org.mapstruct.factory.Mappers;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
@@ -14,101 +12,132 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.Optional;
 
 import lombok.RequiredArgsConstructor;
-import ru.lebedev.reminder.database.entity.Reminder;
+import ru.lebedev.reminder.database.entity.SentStatus;
 import ru.lebedev.reminder.database.repository.ReminderRepository;
-import ru.lebedev.reminder.dto.ReminderCreateDto;
+import ru.lebedev.reminder.dto.ReminderCreateEditDto;
 import ru.lebedev.reminder.dto.ReminderReadDto;
-import ru.lebedev.reminder.filters.Filter;
-import ru.lebedev.reminder.filters.QPredicates;
-import ru.lebedev.reminder.filters.ReminderSearchFilter;
-import ru.lebedev.reminder.mapper.ReminderCreateMapper;
-import ru.lebedev.reminder.mapper.ReminderReadMapper;
+import ru.lebedev.reminder.exception.ExceptionStatus;
+import ru.lebedev.reminder.exception.ReminderServiceException;
+import ru.lebedev.reminder.filters.DateTimeFilter;
+import ru.lebedev.reminder.filters.SearchFilter;
+import ru.lebedev.reminder.mapper.ReminderMapper;
+import ru.lebedev.reminder.service.UserService;
 
 @RequiredArgsConstructor
 @Service
 @Transactional(readOnly = true)
+@Slf4j
 public class ReminderService {
 
-    private final UserServiceImpl userService;
+    private final UserService userService;
 
     private final ReminderRepository reminderRepository;
-    private final ReminderCreateMapper createMapper = Mappers.getMapper(ReminderCreateMapper.class);
-    private final ReminderReadMapper readMapper = Mappers.getMapper(ReminderReadMapper.class);
+    private final ReminderMapper reminderMapper = Mappers.getMapper(ReminderMapper.class);
 
     @Transactional
-    public ReminderReadDto create(ReminderCreateDto reminderCreateDto) {
-        return Optional.ofNullable(reminderCreateDto)
-                       .map(createMapper::reminderCreateDtoToReminder)
+    public ReminderReadDto create(ReminderCreateEditDto reminderCreateDto) {
+        var userId = reminderCreateDto.userId();
+        return Optional.of(reminderCreateDto)
+                       .map(reminderMapper::toEntity)
                        .map(reminder -> {
-                           var user = Optional.ofNullable(userService.findById(reminderCreateDto.userId()))
-                                              .orElseThrow(() -> new RuntimeException(
-                                                      "bad create request"));
+                           var user = Optional.ofNullable(userService.findById(userId))
+                                              .orElseThrow(() -> new ReminderServiceException(
+                                                      "user with %d id not found".formatted(
+                                                              userId),
+                                                      ExceptionStatus.USER_NOT_FOUND_EXCEPTION
+                                              ));
                            reminder.setUser(user);
                            return reminder;
                        })
                        .map(reminderRepository::saveAndFlush)
-                       .map(readMapper::reminderToReminderReadDto)
-                       .orElseThrow(() -> new RuntimeException("bad create request"));
-    }
-
-    public List<ReminderReadDto> findAll() {
-        return reminderRepository.findAll().stream()
-                                 .map(readMapper::reminderToReminderReadDto)
-                                 .toList();
+                       .map(reminderMapper::toDto)
+                       .orElseThrow(() -> new ReminderServiceException(
+                               "remind create issue",
+                               ExceptionStatus.REMINDER_CREATE_ISSUE
+                       ));
     }
 
     public List<ReminderReadDto> findAllWithPagination(Pageable pageable) {
         return reminderRepository.findAll(pageable)
-                                 .map(readMapper::reminderToReminderReadDto)
+                                 .map(reminderMapper::toDto)
                                  .toList();
     }
 
-    public ReminderReadDto findById(Long id) {
-        return reminderRepository.findById(id)
-                                 .map(readMapper::reminderToReminderReadDto)
-                                 .orElseThrow(() -> new RuntimeException("No Remind with such id"));
+    @Transactional
+    public void delete(Long id) {
+        reminderRepository.findById(id)
+                          .map(reminder -> {
+                              reminderRepository.delete(reminder);
+                              reminderRepository.flush();
+                              return true;
+                          })
+                          .orElseThrow(() -> new ReminderServiceException(
+                                  "Remind with %d id, not found".formatted(id),
+                                  ExceptionStatus.REMINDER_NOT_FOUND_EXCEPTION
+                          ));
     }
 
     @Transactional
-    public boolean delete(Long id) {
-        return reminderRepository.findById(id)
-                                 .map(reminder -> {
-                                     reminderRepository.delete(reminder);
-                                     reminderRepository.flush();
-                                     return true;
-                                 }).orElse(false);
-    }
-
-    @Transactional
-    public Optional<ReminderReadDto> update(Long id, ReminderCreateDto dto) {
+    public ReminderReadDto update(Long id, ReminderCreateEditDto dto) {
         var reminder = reminderRepository.findById(id)
-                                         .orElseThrow(() -> new RuntimeException(
-                                                 "No Remind with such id"));
-        createMapper.updateEntity(dto, reminder);
+                                         .orElseThrow(() -> new ReminderServiceException(
+                                                 "Remind with %d id, not found".formatted(id),
+                                                 ExceptionStatus.REMINDER_NOT_FOUND_EXCEPTION
+                                         ));
+        reminderMapper.updateEntity(dto, reminder);
         return Optional.of(reminderRepository.saveAndFlush(reminder))
-                       .map(readMapper::reminderToReminderReadDto);
+                       .map(reminderMapper::toDto)
+                       .orElseThrow(() -> new ReminderServiceException(
+                               "remind update issue",
+                               ExceptionStatus.REMINDER_UPDATE_ISSUE
+                       ));
     }
 
-    public List<ReminderReadDto> findAllByFilter(Filter filter) {
-
-        return reminderRepository.findAllByFilter(filter)
+    public List<ReminderReadDto> findAllByDateAndTimeFilter(DateTimeFilter filter) {
+        return reminderRepository.findAllByDateTimeFilter(filter)
                                  .stream()
-                                 .map(readMapper::reminderToReminderReadDto)
-                                 .collect(Collectors.toList());
+                                 .map(reminderMapper::toDto)
+                                 .toList();
     }
 
-    public List<ReminderReadDto> findAllBySearchFilter(ReminderSearchFilter filter) {
+    public List<ReminderReadDto> findAllBySearchFilter(SearchFilter filter) {
         return reminderRepository.findAllBySearchFilter(filter)
                                  .stream()
-                                 .map(readMapper::reminderToReminderReadDto)
+                                 .map(reminderMapper::toDto)
                                  .toList();
     }
 
-    public List<ReminderReadDto> sort(String field) {
-        Sort sort = Sort.by(Sort.Order.asc(field));
+    public List<ReminderReadDto> sort(String direction, String field) {
+        Sort.Direction sortDirection =
+                direction.equalsIgnoreCase("asc") ? Sort.Direction.ASC : Sort.Direction.DESC;
+        Sort sort = Sort.by(sortDirection, field);
         return reminderRepository.findAll(sort)
                                  .stream()
-                                 .map(readMapper::reminderToReminderReadDto)
+                                 .map(reminderMapper::toDto)
+                                 .toList();
+    }
+
+    @Transactional
+    public void updateEmailSentStatus(Long id, SentStatus status) {
+        reminderRepository.updateEmailSentStatus(id, status);
+    }
+
+    @Transactional
+    public void updateTelegramSentStatus(Long id, SentStatus status) {
+        reminderRepository.updateTelegramSentStatus(id, status);
+    }
+
+    public List<ReminderReadDto> findReminderToEmailSent(LocalDateTime now) {
+        return reminderRepository.findReminderToEmailSent(now)
+                                 .stream()
+                                 .map(reminderMapper::toDto)
+                                 .toList();
+    }
+
+    public List<ReminderReadDto> findReminderToTelegramSent(LocalDateTime now) {
+        return reminderRepository.findReminderToTelegramSent(now)
+                                 .stream()
+                                 .map(reminderMapper::toDto)
                                  .toList();
     }
 
